update movies api and data
